quiz codes postaux

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div align="center"><a href="quiz_quartiers.html"><button class="button is-small is-info is-outlined">>> Je veux vérifier ma connaissance de la géolocalisation des 28 quartiers de Strasbourg <<</button></a></div>
           <br>
 
-       <!-- <div align="center"><a href="quiz_codes_postaux.html"><button class="button is-small is-info is-outlined">>> Je veux vérifier ma connaissance des codes postaux de l'EMS. <<</button></a></div> -->
+       <div align="center"><a href="quiz_cp.html"><button class="button is-small is-info is-outlined">>> Je veux vérifier ma connaissance des codes postaux de l'EMS. <<</button></a></div>
       <br>
 
     
