--- a/chez_paulinette.html
+++ b/chez_paulinette.html
@@ -103,7 +103,7 @@
         <ul>
           <li class="tab is-active"  onclick="openTab(event,'Alcool')">
             <a>
-        <span class="icon is-small"><i class="fas fa-beer-mug" aria-hidden="true"></i></span>
+        <span class="icon is-small"><i class="fas fa-beer-mug-empty" aria-hidden="true"></i></span>
         <span> Alcool</span>
             </a>
           </li>
@@ -116,7 +116,7 @@
           <li class="tab" onclick="openTab(event,'Food')">
             <a>
               
-        <span class="icon is-small"><i class="fa-solid ustensils" aria-hidden="true"></i></span>
+        <span class="icon is-small"><i class="fas fa-carrot" aria-hidden="true"></i></span>
         <span>Grignotage</span>
             </a>
           </li>
@@ -211,6 +211,14 @@
                 <strong>Chocolat chaud</strong>
                 <br>
                 <i>chocolat bio, équitable, disponible avec lait de vache ou lait végétal</i>
+              </div>
+            </article>
+
+            <article class="message is-primary"> 
+              <div class="message-body" style="text-align:center;">
+                <strong>Perrier</strong>
+                <br>
+                <i>rondelle ou tranche ?</i>
               </div>
             </article>
           </div>
