--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -89,7 +89,7 @@
 
     <p class="title is-3" style="text-align:center;">Pour les p'tites soifs et les p'tits creux</p>
 
-    <nav class="tabs is-boxed is-fullwidth is-large">
+    <div class="tabs is-toggle is-centered">
       <div class="container">
 
         <ul>
@@ -102,19 +102,19 @@
           <li class="tab" onclick="openTab(event,'SansAlcool')">
             <a>
         <span class="icon is-small"><i class="fas fa-mug-hot" aria-hidden="true"></i></span>
-        <span> Sans alcool</span>
+        <span> Soft</span>
             </a>
           </li>
           <li class="tab" onclick="openTab(event,'Food')">
             <a>
               
         <span class="icon is-small"><i class="fas fa-carrot" aria-hidden="true"></i></span>
-        <span>Grignotage</span>
+        <span>Food </span>
             </a>
           </li>
         </ul>
       </div>
-    </nav>
+    </div>
 
       <div id="Alcool" class="content-tab" >
 
