--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Chez Paulinette</title>
+    <title>Chez Paulinette | Accueil</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="app.css">
     <link rel="icon" href="beer_favicon.ico" />
@@ -24,25 +24,6 @@
 
 
 </nav>
-
-
-<!--<nav class="navbar is-fixed-top is-light" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" href="#">
-      <img src="logo_horizontal.png" width="150">
-    </a>
-  </div>
-
-  <div id="navbarBasicExample" class="navbar-menu">
-      <a class="navbar-item" href="#creux">
-        Un p'tit creux
-      </a>
-
-      <a class="navbar-item"  href="#jeux">
-        Un p'tit jeu
-      </a>
-    </div>
-</nav>-->
 
 
 <section class="hero is-success">
@@ -65,22 +46,6 @@
 
 
 
-
-
-
-<!-- <nav class="tabs is-boxed is-fullwidth is-large">
-        <div class="container">
-          <ul>
-            <li class="tab is-active" onclick="openTab(event,'WebDev')"><a >Web Development</a></li>
-            <li class="tab" onclick="openTab(event,'WebAud')"><a >Website Audit</a></li>
-            <li class="tab" onclick="openTab(event,'Support')"><a >Support</a></li>
-          </ul>
-        </div>
-      </nav>
-  </div> -->
-
-
-  
 <div class="container section">
 
   <div class="card" id="creux">
@@ -157,6 +122,12 @@
 
             <article class="message is-success">
               <div class="message-body" style="text-align:center;">
+                <strong>Rhum - coca</strong>
+              </div>
+            </article>
+
+            <article class="message is-success">
+              <div class="message-body" style="text-align:center;">
                 <strong>Limoncello</strong>
                 <br>
                 <i>liqueur de citron</i>
@@ -184,7 +155,7 @@
               <div class="message-body" style="text-align:center;">
                 <strong>Le thé</strong>
                 <br>
-                <i>aux herbes cueillies dans les plus belles capitales du monde...</i>
+                <i>aux herbes des plus belles capitales mondiales</i>
               </div>
             </article>
 
@@ -194,7 +165,7 @@
                 <br>
                 <i>américain avec 2 volumes et demi d'eau</i>
                 <br>
-                <span class="tag is-warning is-light">Indispensable pour commencer la journée !</span>
+                <span class="tag is-warning is-light">L'indispensable du matin !</span>
               </div>
             </article>
 
@@ -202,7 +173,7 @@
               <div class="message-body" style="text-align:center;">
                 <strong>Chocolat chaud</strong>
                 <br>
-                <i>chocolat bio, équitable, disponible avec lait de vache ou lait végétal</i>
+                <i>Avec lait de vache ou lait végétal</i>
               </div>
             </article>
 
