--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -111,6 +111,14 @@
                 <i>brassée à Achouffe depuis 1982</i>
               </div>
             </article>
+              
+              <article class="message is-success">
+              <div class="message-body" style="text-align:center;">
+                <strong>TTL</strong>
+                <br>
+                <i>tequila, crème de framboise, jus de citron</i>
+              </div>
+            </article>
 
             <article class="message is-success">
               <div class="message-body" style="text-align:center;">
