--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -104,13 +104,7 @@
               </div>
             </article>
 
-            <article class="message is-success">
-              <div class="message-body" style="text-align:center;">
-                <strong>Chouffe</strong>
-                <br>
-                <i>brassée à Achouffe depuis 1982</i>
-              </div>
-            </article>
+
               
               <article class="message is-success">
               <div class="message-body" style="text-align:center;">
@@ -124,7 +118,7 @@
               <div class="message-body" style="text-align:center;">
                 <strong>Teq paf comme au lycée</strong>
                 <br>
-                <i>tequila, tonic, sel, citron</i>
+                <i>tequila, sel, citron</i>
               </div>
             </article>
 
@@ -141,6 +135,123 @@
                 <i>liqueur de citron</i>
               </div>
             </article>
+
+
+            <div class="notification is-warning" style="text-align:center;">
+                <strong>Les bières</strong>
+              </div>
+            </article>
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Chouffe</strong>
+                <br>
+                <i>brassée à Achouffe depuis 1982</i>
+              </div>
+            </article>
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Meteor de printemps</strong>
+                <br>
+                <i>brassée à Hochfelden</i>
+                <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Meteor IPA</strong>
+                <br>
+                <i>brassée à Hochfelden</i>
+                <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Meteor Summer IPA</strong>
+                <br>
+                <i>brassée à Hochfelden</i>
+                <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Brewdog IPA</strong>
+                <br>
+                <i>brassée à Ellon (Écosse)</i>
+              </div>
+            </article>
+
+            <article class="message is-success"  style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Matten Blonde</strong>
+                <br>
+                <i>brassée à Matzenheim</i>
+                <br>
+                <span class="tag is-danger is-light">Assez Local</span>
+              </div>
+            </article>
+
+            <article class="message is-success"  style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Bendorf - Queen Of Langstross IPA</strong>
+                <br>
+                <i>brassée à Neudorf</i>
+                <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Perle IPA</strong>
+                    <br>
+                <i>brassée à Strasbourg</i>
+                  <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+
+            <article class="message is-success">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Hapkin</strong>
+                    <br>
+                <i>brassée à Alken</i>
+                  <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+
+            <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Fischer tradition</strong>
+                    <br>
+                <i>brassée à Schiltigheim</i>
+                  <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
+
+            <article class="message is-success">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>Fischer Dorelei</strong>
+                    <br>
+                <i>brassée à Schiltigheim</i>
+                  <br>
+                <span class="tag is-danger is-light">Local</span>
+              </div>
+            </article>
+
           </div>
         </div>
       </div>
@@ -171,7 +282,7 @@
               <div class="message-body" style="text-align:center;">
                 <strong>Café</strong>
                 <br>
-                <i>américain avec 2 volumes et demi d'eau</i>
+                <i>américain avec 1 volume et demi d'eau</i>
                 <br>
                 <span class="tag is-warning is-light">L'indispensable du matin !</span>
               </div>
@@ -208,6 +319,8 @@
                 <strong>Le cake au citron</strong>
                 <br>
                 <i>recette familiale avec glaçage de rêve</i>
+                <br>
+                <span class="tag is-danger is-light">Démoulage non garanti</span>
               </div>
             </article>
 
@@ -288,7 +401,7 @@
 <footer class="footer">
   <div class="content has-text-centered">
     <p>
-      Création exclusive pour <i>Chez Paulinette</i>. Touts droits réservés.
+      Création exclusive pour <i>Chez Paulinette</i>. Tous droits réservés.
     </p>
   </div>
 </footer>
