--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -351,6 +351,14 @@
                 <span class="tag is-danger is-light">Gras</span>
               </div>
             </article>
+              
+           <article class="message is-info">
+              <div class="message-body" style="text-align:center;">
+                <strong>L'éclair au café</strong>
+                <br>
+                <i>le seul goût tolérable</i>
+              </div>
+            </article>
 
           </div>
         </div>
