--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -339,6 +339,8 @@
                 <strong>Les véritables rillettes du Mans</strong>
                 <br>
                 <i>selon arrivage</i>
+                <br>  
+                <span class="tag is-danger is-light">Porc</span>
               </div>
             </article>
 
