--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -142,6 +142,17 @@
               </div>
             </article>
 
+              <article class="message is-success" style="margin-bottom:1em;">
+              <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
+                <strong>La Joly-Cheval</strong>
+                <br>
+                <i>brassée par nos soins</i>
+                <br>
+                <span class="tag is-danger is-light">Edition limitée</span>
+
+              </div>
+            </article>
+            
             <article class="message is-success" style="margin-bottom:1em;">
               <div class="message-body" style="text-align:center; padding-top:0.5em; padding-bottom:0.5em;">
                 <strong>Chouffe</strong>
