--- a/chezpaulinette.html
+++ b/chezpaulinette.html
@@ -236,8 +236,6 @@
                 <strong>Hapkin</strong>
                     <br>
                 <i>brassée à Alken</i>
-                  <br>
-                <span class="tag is-danger is-light">Local</span>
               </div>
             </article>
 
@@ -296,6 +294,16 @@
                 <i>américain avec 1 volume et demi d'eau</i>
                 <br>
                 <span class="tag is-warning is-light">L'indispensable du matin !</span>
+              </div>
+            </article>
+
+             <article class="message is-primary"> 
+              <div class="message-body" style="text-align:center;">
+                <strong>Café frappé</strong>
+                <br>
+                <i>au sirop de vanille ou de noisette</i>
+                <br>
+                <span class="tag is-warning is-light">Uniquement en été</span>
               </div>
             </article>
 
