--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
       <div align="center"><a href="jaifaim.html"><button class="button is-small is-info is-outlined">>> J'ai faim. <<</button></a></div>
       <br>
 
+      <div align="center"><a href="parlons_chocolat.html"><button class="button is-small is-info is-outlined">>> Je veux parler de chocolat.<<</button></a></div>
+      <br>
+
         <div align="center"><a href="quiz_ems.html"><button class="button is-small is-info is-outlined">>> Je veux vérifier ma connaissance des noms des 33 communes de l'EMS.<<</button></a></div>
       <br>
 
@@ -72,10 +75,9 @@
       <br>
 
     
-    
+    <p>Pour ta santé, mange au moins 5 fruits et légumes par jour !</p>
 
-      <!--<div id="map"  style="height:100vh;width:100%">    
-      </div>-->
+      <img style="max-width:50%" src="./fruits_legumes.jpg">
 
 </section> 
 
