--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       <br>
 
     
-    <p>Pour ta santé, mange au moins 5 fruits et légumes par jour !</p>
-
-      <img style="max-width:50%" src="./fruits_legumes.jpg">
+    <p align="center">Pour ta santé, mange au moins 5 fruits et légumes par jour !</p>
+    <br>
+    <img align="center" style="max-width:50%" src="./fruits_legumes.jpg">
 
 </section> 
 
