--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
       <br>
 
     
-    <p align="center">Pour ta santé, mange au moins 5 fruits et légumes par jour !</p>
+    <p align="center">Pour ta santé, mange au moins 5 quiz et légumes par jour !</p>
     <br>
-    <img align="center" style="max-width:50%" src="./fruits_legumes.jpg">
+    <div align="center"><img style="max-width:50%" src="./fruits_legumes.jpg"></div>
 
 </section> 
 
